--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -192,16 +192,19 @@ body {
 .block__item1 {
   grid-column: 1 / 2;
   grid-row: 1 / 2;
+  grid-area: block__item1;
 }
 
 .block__item2 {
   grid-column: 1 / 2;
   grid-row: 2 / 3;
+  grid-area: block__item2;
 }
 
 .block__item3 {
   grid-column: 1 / 2;
   grid-row: 3 / 4;
+  grid-area: block__item3;
 }
 
 .button__reasons-container {
@@ -347,25 +350,27 @@ body {
     padding: 0 39px 0 39px;
   }
 
+  .main__block1-text {
+    font-size: 20px;
+  }
+
   .main_block2-list {
     padding: 0 40px 60px 40px;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr;
+    grid-template-areas: "block__item1 block__item2 block__item3";
   }
 
   .block__item1 {
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
+    grid-column: span 1;
   }
 
   .block__item2 {
-    grid-column: 2 / 3;
-    grid-row: 2 / 3;
+    grid-column: span 1;
   }
 
   .block__item3 {
-    grid-column: 3 / 4;
-    grid-row: 1 / 2;
+    grid-column: span 1;
   }
 
   .footer__grid {
